--- a/3. Number Delete/index.html
+++ b/3. Number Delete/index.html
@@ -1,24 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Number Delete</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style> #body { margin: 10px;}</style>
 </head>
+
 <body>
-    <h3>Delete the Divisible Number</h3>
-    <div>
-        <span id="divisible">Divisible by:</span>
-        <input type="number" id="div">
-        <button id="delete" onclick="del()">Delete</button>
-    </div>
-    <br>
-    <div id="display">
-        <span>Click a button:</span>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../1. JS_Functions/index.html">Arithmetic
+                            Functions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../2. Stack_Implementation/index.html">Stack</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../3. Number Delete/index.html">Divide & Delete</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../4. New_Balance/index.html">Check Balance</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../5. Form Validation/index.html">Form Validation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../6. Random Color/index.html">Random Color</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div id="body">
+        <h3>Delete the Divisible Number</h3>
+        <div>
+            <span id="divisible">Divisible by:</span>
+            <input type="number" id="div">
+            <button id="delete" onclick="del()">Delete</button>
+        </div>
         <br>
-        <div id="result"></div>
+        <div id="display">
+            <span>Click a button:</span>
+            <br>
+            <div id="result"></div>
+        </div>
+        <script src="index.js"></script>
     </div>
-    <script src="index.js"></script>
 </body>
+
 </html>
