--- a/4. New_Balance/index.html
+++ b/4. New_Balance/index.html
@@ -6,38 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Balance Calculator</title>
     <script src="calculate.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style> #body { margin: 10px;}</style>
 </head>
 <body>
-    <form action="#">
-        <div>
-            <lebel for="acnum">Account Number:</lebel>
-            <input type="number" id="acnum">
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../1. JS_Functions/index.html">Arithmetic
+                            Functions</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../2. Stack_Implementation/index.html">Stack</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../3. Number Delete/index.html">Divide & Delete</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="../4. New_Balance/index.html">Check Balance</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../5. Form Validation/index.html">Form Validation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../6. Random Color/index.html">Random Color</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <br>
-        <div>
-            <lebel for="crLimit">Credit Limit:</lebel>
-            <input type="number" id="crLimit">
-        </div>
-        <br>
-        <div>
-            <lebel for="bgBal">Beginning Balance:</lebel>
-            <input type="number" id="bgBal">
-        </div>
-        <br>
-        <div>
-            <lebel for="totalexp">Total Expenditure:</lebel>
-            <input type="number" id="totalexp">
-        </div>
-        <br>
-        <div>
-            <lebel for="totCredit">Total Credit Payment:</lebel>
-            <input type="number" id="totCredit">
-        </div>
-        <br>
-        <button type="submit" onclick="calculate()">Calculate</button>
-        <br><br>
-        <div id="display"> </div>
-    </form>
+    </nav>
+
+    <div id="body">
+        <form action="#">
+            <div>
+                <lebel for="acnum">Account Number:</lebel>
+                <input type="number" id="acnum">
+            </div>
+            <br>
+            <div>
+                <lebel for="crLimit">Credit Limit:</lebel>
+                <input type="number" id="crLimit">
+            </div>
+            <br>
+            <div>
+                <lebel for="bgBal">Beginning Balance:</lebel>
+                <input type="number" id="bgBal">
+            </div>
+            <br>
+            <div>
+                <lebel for="totalexp">Total Expenditure:</lebel>
+                <input type="number" id="totalexp">
+            </div>
+            <br>
+            <div>
+                <lebel for="totCredit">Total Credit Payment:</lebel>
+                <input type="number" id="totCredit">
+            </div>
+            <br>
+            <button type="submit" onclick="calculate()">Calculate</button>
+            <br><br>
+            <div id="display"> </div>
+        </form>
+    </div>
 
 </body>
 </html>
