Nav 1st link changed to netlify link

--- a/File/1. JS_Functions/index.html
+++ b/File/1. JS_Functions/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../1. JS_Functions/index.html">Arithmetic
+                        <a class="nav-link active" aria-current="page" href="https://vigilant-johnson-170455.netlify.app/">Arithmetic
                             Functions</a>
                     </li>
                     <li class="nav-item">
