Nav 1st link changed to netlify link

--- a/File/1. JS_Functions/index.html
+++ b/File/1. JS_Functions/index.html
@@ -27,7 +27,7 @@
                             Functions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://vigilant-johnson-170455.netlify.app/">Stack</a>
+                        <a class="nav-link" href="../2. Stack_Implementation/index.html">Stack</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../3. Number Delete/index.html">Divide & Delete</a>
