--- a/File/2. Stack_Implementation/index.html
+++ b/File/2. Stack_Implementation/index.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../1. JS_Functions/index.html">Arithmetic
+                        <a class="nav-link" aria-current="page" href="https://vigilant-johnson-170455.netlify.app/">Arithmetic
                             Functions</a>
                     </li>
                     <li class="nav-item">
