--- a/File/1. JS_Functions/index.html
+++ b/File/1. JS_Functions/index.html
@@ -23,11 +23,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../1. JS_Functions/index.html">Arithmetic
+                        <a class="nav-link active" aria-current="page" href="https://vigilant-johnson-170455.netlify.app/">Arithmetic
                             Functions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../2. Stack_Implementation/index.html">Stack</a>
+                        <a class="nav-link" href="https://unruffled-wiles-919bcc.netlify.app/">Stack</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../3. Number Delete/index.html">Divide & Delete</a>
