--- a/File/2. Stack_Implementation/index.html
+++ b/File/2. Stack_Implementation/index.html
@@ -26,7 +26,7 @@
                             Functions</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../2. Stack_Implementation/index.html">Stack</a>
+                        <a class="nav-link active" href="https://unruffled-wiles-919bcc.netlify.app/">Stack</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../3. Number Delete/index.html">Divide & Delete</a>
