Nav link changed to netlify link

--- a/File/5. Form Validation/index.html
+++ b/File/5. Form Validation/index.html
@@ -27,16 +27,16 @@
                         <a class="nav-link" href="https://unruffled-wiles-919bcc.netlify.app/">Stack</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../3. Number Delete/index.html">Divide & Delete</a>
+                        <a class="nav-link" href="https://relaxed-hawking-c5c7a6.netlify.app/">Divide & Delete</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../4. New_Balance/index.html">Check Balance</a>
+                        <a class="nav-link" href="https://nifty-villani-deebf6.netlify.app/">Check Balance</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="../5. Form Validation/index.html">Form Validation</a>
+                        <a class="nav-link active" href="https://reverent-snyder-59c637.netlify.app/">Form Validation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../6. Random Color/index.html">Random Color</a>
+                        <a class="nav-link" href="https://optimistic-hugle-dd1d68.netlify.app/">Random Color</a>
                     </li>
                 </ul>
             </div>
