--- a/File/6. Random Color/index.html
+++ b/File/6. Random Color/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Color</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         *{
             margin: 0px;
@@ -25,7 +27,13 @@
 </head>
 <body>
 
-    <div class="navbar" id="navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="https://vigilant-johnson-170455.netlify.app/">Arithmetic
@@ -41,13 +49,15 @@
                         <a class="nav-link" href="https://nifty-villani-deebf6.netlify.app/">Check Balance</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://reverent-snyder-59c637.netlify.app/">Form Validation</a>
+                        <a class="nav-link active" href="https://reverent-snyder-59c637.netlify.app/">Form Validation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://optimistic-hugle-dd1d68.netlify.app/">Random Color</a>
+                        <a class="nav-link" href="https://optimistic-hugle-dd1d68.netlify.app/">Random Color</a>
                     </li>
                 </ul>
-    </div>
+            </div>
+        </div>
+    </nav>
 
     <button id="btn">Change Color</button>
 
@@ -66,7 +76,7 @@
         change.addEventListener("click", ()=>{
             document.getElementById('btn').style.backgroundColor = random_Color();
             document.getElementById('btn').style.color = random_Color();
-            document.body.bgColor = random_Color();
+            document.body.style.backgroundColor = random_Color();
         });
     </script>
 
