Random Color Bug Fixed

--- a/File/6. Random Color/index.html
+++ b/File/6. Random Color/index.html
@@ -49,10 +49,10 @@
                         <a class="nav-link" href="https://nifty-villani-deebf6.netlify.app/">Check Balance</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="https://reverent-snyder-59c637.netlify.app/">Form Validation</a>
+                        <a class="nav-link" href="https://reverent-snyder-59c637.netlify.app/">Form Validation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://optimistic-hugle-dd1d68.netlify.app/">Random Color</a>
+                        <a class="nav-link active" href="https://optimistic-hugle-dd1d68.netlify.app/">Random Color</a>
                     </li>
                 </ul>
             </div>
